# csc305_spring2020_labs

./: .gitignore  CMakeLists.txt  README.md
labs/: CMakeLists.txt
labs/lab01_intro/: CMakeLists.txt  README.md  main.cpp  solution.cpp
labs/lab02_sphere/: README.md  lab.hpp  main.cpp  solution.cpp  solution.hpp
labs/lab03_camera/: README.md  lab.hpp  main.cpp  solution.cpp  solution.hpp
labs/lab04_shading/: CMakeLists.txt  README.md  lab.hpp  main.cpp  solution.cpp  solution.hpp
labs/lab05_gl_intro/: README.md  lab.hpp  main.cpp
labs/lab06_gl_camera/: CMakeLists.txt  README.md  lab.hpp  main.cpp  paths.hpp.in  triangle.frag  triangle.vert
